# GpuPassflow

./: CMakeLists.txt  README.md  User.cmake  build.sh  clean.sh
.github/workflows/: windows.yml
3rd/: .gitignore  CMakeLists.txt  clean_deps.sh
include/: GpuPassflow.h
include/backend/: BackendContext.h  BasicTypes.h  CommandRecorder.h  Descriptor.h  DescriptorGroup.h  DescriptorHeap.h  Device.h  ImageSampler.h  InputIndex.h  InputIndexAttribute.h  InputVertex.h  InputVertexAttributes.h  PipelineLayout.h  PipelineState.h  ResourceBuffer.h  ResourceConstantBuffer.h  ResourceImage.h  ResourceStorageBuffer.h  Shader.h  Swapchain.h
include/passflow/: BasePass.h  ComputePass.h  FrameResources.h  Passflow.h  RasterizePass.h  Resources.h  Resources.inl
include/passflow/pass/: BasePass.h  ComputePass.h  RasterizePass.h
include/passflow/pass/resource/: DescriptorManager.h  FrameResources.h  PassProperties.h  Resources.h  Resources.inl
sample/: CMakeLists.txt  Main.cpp  PassflowCP.cpp  PassflowCP.h  PassflowDemo.h  PassflowRP.cpp  PassflowRP.h  SampleMain.cpp
source/: CMakeLists.txt
source/backend/: BackendContext.cpp  BackendWrapper.hpp  CMakeLists.txt
source/backend/cpu/: CMakeLists.txt
source/backend/dx12/: CMakeLists.txt  DX12BackendHeaders.h  DX12BackendModule.cpp  DX12BaseObject.cpp  DX12BaseObject.h  DX12BasicTypes.cpp  DX12BasicTypes.h  DX12CommandRecorder.cpp  DX12CommandRecorder.h  DX12Common.cpp  DX12Common.h  DX12Context.cpp  DX12Context.h  DX12Descriptor.cpp  DX12Descriptor.h  DX12DescriptorGroup.cpp  DX12DescriptorGroup.h  DX12DescriptorHeap.cpp  DX12DescriptorHeap.h  DX12Device.cpp  DX12Device.h  DX12ImageSampler.cpp  DX12ImageSampler.h  DX12InputIndex.cpp  DX12InputIndex.h  DX12InputIndexAttribute.cpp  DX12InputIndexAttribute.h  DX12InputVertex.cpp  DX12InputVertex.h  DX12InputVertexAttributes.cpp  DX12InputVertexAttributes.h  DX12PipelineLayout.cpp  DX12PipelineLayout.h  DX12PipelineState.cpp  DX12PipelineState.h  DX12ResourceBuffer.cpp  DX12ResourceBuffer.h  DX12ResourceConstantBuffer.cpp  DX12ResourceConstantBuffer.h  DX12ResourceImage.cpp  (+7 more)
source/backend/vulkan/: CMakeLists.txt
source/passflow/: BasePass.cpp  CMakeLists.txt  ComputePass.cpp  Passflow.cpp  RasterizePass.cpp  Resources.cpp
source/passflow/general/: Backend.cpp  Backend.h  Configuration.cpp  Configuration.h
source/passflow/pass/: BasePass.cpp  ComputePass.cpp  RasterizePass.cpp
source/passflow/pass/resource/: DescriptorManager.cpp  PassProperties.cpp  Resources.cpp
source/passflow/passes/: BasePass.cpp  ComputePass.cpp  RasterizePass.cpp
